--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,15 @@
 # Docker host port mapping
 HOST_PORT=3000
+FRONTEND_PORT=8080
 
 # JWT config
 JWT_SECRET=replace-with-strong-random-secret
 JWT_ISSUER=bowas
 JWT_AUDIENCE=bowas-clients
 JWT_TTL_SECONDS=3600
+
+# CORS
+CORS_ORIGIN=*
 
 # Login credentials for /login
 AUTH_USERNAME=admin
