--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - AUTH_USERNAME=${AUTH_USERNAME:-admin}
       - AUTH_PASSWORD=${AUTH_PASSWORD:-admin}
       - JWT_TTL_SECONDS=${JWT_TTL_SECONDS:-3600}
+      - CORS_ORIGIN=${CORS_ORIGIN:-*}
     volumes:
       - ./.wwebjs_auth:/app/.wwebjs_auth
       - ./.wwebjs_cache:/app/.wwebjs_cache
@@ -25,3 +26,12 @@ services:
       sh -lc "rm -f /app/.wwebjs_auth/session-docker/SingletonLock
       /app/.wwebjs_auth/session-docker/SingletonCookie
       /app/.wwebjs_auth/session-docker/SingletonSocket && npm start"
+
+  frontend:
+    build: ./frontend
+    container_name: bowas-frontend
+    restart: unless-stopped
+    depends_on:
+      - bowas
+    ports:
+      - "${FRONTEND_PORT:-8080}:80"
