feat(autoreply): persist rules in sqlite

--- a/.env_example
+++ b/.env_example
@@ -11,6 +11,9 @@ JWT_TTL_SECONDS=3600
 # CORS
 CORS_ORIGIN=*
 
+# Auto-reply sqlite
+AUTOREPLY_DB_PATH=/home/$USER/bowas/data/autoreply.db
+
 # Login credentials for /login
 AUTH_USERNAME=admin
 AUTH_PASSWORD=replace-with-strong-password
