--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "qrcode": "^1.5.4",
+    "sqlite3": "^5.1.7",
     "whatsapp-web.js": "^1.34.6"
   },
   "devDependencies": {
